# shell-pilot

./: LICENSE  README.md  pyproject.toml  tests.py
src/: main.py
src/functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
